[package]
name = "ezcli"
version = "0.1.0"
authors = ["Alexander Johnston <Aliics@hotmail.com>"]
edition = "2018"
repository = "https://github.com/Aliics/ezcli"
keywords = ["cli", "argument", "arg"]
categories = ["Command-line-interface"]
description = "Easy CLI crate for Rust"
readme = "README.md"
