[package]
name = "ezcli"
version = "0.3.0"
authors = ["Alexander Johnston <Aliics@hotmail.com>"]
edition = "2018"
repository = "https://github.com/Aliics/ezcli"
keywords = ["cli", "argument", "arg"]
categories = ["command-line-interface"]
description = "Easy CLI crate for Rust"
readme = "README.md"
license = "MIT OR Apache-2.0" # I don't know anything about licenses... help.
